--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Caeleb's Website</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-    <h1>Caeleb's Website</h1>
+    <h1>Welcome to my Website:</h1>
+    please click this link:
+    <a href = "www.google.com">link</a>
+
 </head>
 <body>
     
