--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Caeleb's Website</title>
     <h1>Welcome to my Website:</h1>
     please click this link:
-    <a href = "www.google.com">link</a>
+    <a href = "https://www.google.com">link</a>
 
 </head>
 <body>
