--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="fun.css">
     <title>Caeleb's Website</title>
     <h1>Welcome to my Website:</h1>
     please click this link:
