--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <link rel="stylesheet" href="fun.css">
     <title>Caeleb's Website</title>
-    <h1>Welcome to my Website:</h1>
+    <div style = "clear: both">
+    <h1 class = "test"> Expand </h1>
+    <h1 class = "test2"> Fade </h1>
+    </div>
 
 </head>
 <body>
