--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <link rel="stylesheet" href="fun.css">
     <title>Caeleb's Website</title>
-    <div style = "clear: both">
-    <h1 class = "test"> Expand </h1>
-    <h1 class = "test2"> Fade </h1>
-    </div>
-
+    <h1> Welcome to my website! </h1>
 </head>
 <body>
-    
+    <div class = "expand">Expand like Claudia's ass</div>
+    <div class = "fade"> Fade away like Caeleb's ugly face</div>
+    <a href = "page2.html"> press here to see a secret</a>
 </body>
 </html>
