first actual commit

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="fun.css">
+    <link rel="stylesheet" href="sitestyle.css">
     <title>Caeleb's Website</title>
-    <h1> Welcome to my website! </h1>
 </head>
 <body>
-    <div class = "expand">Expand like Claudia's ass</div>
-    <div class = "fade"> Fade away like Caeleb's ugly face</div>
-    <a href = "page2.html"> press here to see a secret</a>
+
+    <div class = "test">
+        Microsoft Windows [Version 10.0.18363.1256]
+        </br>
+        (c) 2019 Microsoft Corporation. All rights reserved.
+    </div>
+    <h1> Welcome to my website<div class = "cursor"></div></h1> 
+    <a href = "page2.html"> C:\User\Caeleb> </a>
 </body>
 </html>
