--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <header>
+        <link rel="stylesheet" href="sitestyle.css">
         <h1></h1>
     </header>
     <body></body>
