--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 
     <div class = "test">
-        Microsoft Windows [Version 10.0.18363.1256]
+        Caeleb Window [Version 16.2.23121.1356]
         </br>
-        (c) 2019 Microsoft Corporation. All rights reserved.
+        (c) 2019 Caeleb Corporation. All rights reserved.
     </div>
     <h1> Welcome to my website<div class = "cursor"></div></h1> 
     <a href = "page2.html"> C:\User\Caeleb> </a>
