--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html>
     <header>
         <link rel="stylesheet" href="sitestyle.css">
-        <h1></h1>
+        <a href = "index.html"> back </a>
     </header>
     <body></body>
 </html>
