--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
 <body>
 
     <div class = "test">
-        Caeleb Window [Version 16.2.23121.1356]
+        Caeleb's Site [Version 16.2.1916.1356]
         </br>
-        (c) 2019 Caeleb Corporation. All rights reserved.
+        (c) 2020 Caeleb Corporation. All rights reserved.
     </div>
-    <h1> Welcome to my website<div class = "cursor"></div></h1> 
-    <a href = "page2.html"> C:\User\Caeleb> </a>
+
+    <h1> Caeleb Koharjo<div class = "cursor"></div></h1> 
+
+    <div class ="horizontal"></div>
+    <div class ="vertical"></div>
+    </br>
+    <h2> 1) </h2> <a href = "page2.html">C:\User\Caeleb></a>
+    </br>
+    <h2> 2) </h2><a href = "page2.html">C:\User\Caeleb\Resume></a>
 </body>
 </html>
