--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     <h1> Caeleb Koharjo<div class = "cursor"></div></h1> 
 
     <div class ="horizontal"></div>
+    <!------
     <div class ="vertical"></div>
+    --->
+    <div class = "sadface">:)</div>
+    <p>Welcome to my website! I'm a second year undergraduate at the University of British Columbia, specializing in mathematics.
+        I'm currently learning web design as a hobby, so feel free to give any feedback/advice on my current site!
+    </p>
     </br>
     <h2> 1) </h2> <a href = "page2.html">C:\User\Caeleb></a>
     </br>
     <h2> 2) </h2><a href = "page2.html">C:\User\Caeleb\Resume></a>
+    </br>
+    <h2> 3) </h2><a href = "page2.html">C:\User\Caeleb\Github</a>
 </body>
 </html>
