--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 </head>
 <body>
 
-    <div class = "test">
-        Caeleb's Site [Version 16.2.1916.1356]
-        </br>
-        (c) 2020 Caeleb Corporation. All rights reserved.
+    <div class = "black">
+        <div class = "test">
+            Caeleb's Site [Version 16.2.1916.1356]
+            </br>
+            (c) 2020 Caeleb Corporation. All rights reserved.
+        </div>
+        <h1> Caeleb Koharjo<div class = "cursor"></div></h1> 
     </div>
-
-    <h1> Caeleb Koharjo<div class = "cursor"></div></h1> 
-
-    <div class ="horizontal"></div>
     <div class = "sadface">:)</div>
     <p>Welcome to my website! I'm a second year undergraduate at the University of British Columbia, specializing in mathematics.
         I'm currently learning web design as a hobby, so feel free to give any feedback/advice on my current site!
@@ -25,5 +24,6 @@
     <h2> 2) </h2><a href = "page2.html">C:\User\Caeleb\Resume></a>
     </br>
     <h2> 3) </h2><a href = "page2.html">C:\User\Caeleb\Github</a>
+
 </body>
 </html>
