--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <div class = "black">
         <div class = "test">
-            Caeleb's Site [Version 16.2.1916.1356]
+            Caeleb's Site [Version 0.8]
             </br>
             (c) 2020 Caeleb Corporation. All rights reserved.
         </div>
@@ -21,9 +21,9 @@
     </br>
     <h2> 1) </h2> <a href = "page2.html">C:\User\Caeleb></a>
     </br>
-    <h2> 2) </h2><a href = "page2.html">C:\User\Caeleb\Resume></a>
+    <h2> 2) </h2><a href = "resources/resume.pdf">C:\User\Caeleb\Resume></a>
     </br>
-    <h2> 3) </h2><a href = "page2.html">C:\User\Caeleb\Github</a>
+    <h2> 3) </h2><a href = "https://github.com/caelebk">C:\User\Caeleb\Github</a>
 
 </body>
 </html>
