--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="sitestyle.css">
-    <title>Caeleb's Website</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Caeleb Koharjo</title>
+    <link rel="stylesheet" href="Bootstraps/css/bootstrap.min.css">
 </head>
 <body>
-
-    <div class = "black">
-        <div class = "test">
-            Caeleb's Site [Version 0.8]
-            </br>
-            (c) 2020 Caeleb Corporation. All rights reserved.
-        </div>
-        <h1> Caeleb Koharjo<div class = "cursor"></div></h1> 
-    </div>
-    <div class = "sadface">:)</div>
-    <p>Welcome to my website! I'm a second year undergraduate at the University of British Columbia, specializing in mathematics.
-        I'm currently learning web design as a hobby, so feel free to give any feedback/advice on my current site!
-    </p>
-    </br>
-    <h2> 1) </h2> <a href = "page2.html">C:\User\Caeleb></a>
-    </br>
-    <h2> 2) </h2><a href = "resources/resume.pdf">C:\User\Caeleb\Resume></a>
-    </br>
-    <h2> 3) </h2><a href = "https://github.com/caelebk">C:\User\Caeleb\Github</a>
-
+    <nav class="container-fluid">
+        <h1 class="display-1 text-center">Caeleb Koharjo</h1>
+        <hr>
+    </nav>
+    <section class="container">
+        <p class='lead text-center display-5 p-5'>Currently reworking website...</p>
+        <p class='lead text-center'>Second year undergraduate student at UBC, specializing in Computer Science.</p>
+    </section>
+    <script src="Bootstraps/js/bootstrap.min.js"></script>
 </body>
 </html>
