added github, linkedin, and resume information

--- a/index.html
+++ b/index.html
@@ -13,8 +13,32 @@
         <hr>
     </nav>
     <section class="container">
-        <p class='lead text-center display-5 p-5'>Currently reworking website...</p>
+        <p class='lead text-center text-danger display-5 p-5'>Currently reworking website...</p>
+        <hr>
         <p class='lead text-center'>Second year undergraduate student at UBC, specializing in Computer Science.</p>
+        <div class="list-group container">
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <a href="resources/resume-intern.pdf" class="list-group-item list-group-item-action text-center"> Resume </a>
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <a href="https://github.com/caelebk" class="list-group-item list-group-item-action text-center"> GitHub </a>
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <a href="https://www.linkedin.com/in/caeleb-koharjo-709174190/" class="list-group-item list-group-item-action text-center"> LinkedIn </a>
+                </div>
+                <div class="col-3"></div>
+            </div>
+        </div>
     </section>
     <script src="Bootstraps/js/bootstrap.min.js"></script>
 </body>
