--- a/index.html
+++ b/index.html
@@ -16,27 +16,21 @@
         <p class='lead text-center text-danger display-5 p-5'>Currently reworking website...</p>
         <hr>
         <p class='lead text-center'>Second year undergraduate student at UBC, specializing in Computer Science.</p>
-        <div class="list-group container">
-            <div class="row">
-                <div class="col-3"></div>
-                <div class="col-6">
+        <div class="list-group container border pb-4 border-primary align-items-center pe-0" style='width:25%'>
+            <div class="row mt-4">
+                <div class="col">
                     <a href="resources/resume-intern.pdf" class="list-group-item list-group-item-action text-center"> Resume </a>
                 </div>
-                <div class="col-3"></div>
             </div>
-            <div class="row">
-                <div class="col-3"></div>
-                <div class="col-6">
+            <div class="row mt-4">
+                <div class="col">
                     <a href="https://github.com/caelebk" class="list-group-item list-group-item-action text-center"> GitHub </a>
                 </div>
-                <div class="col-3"></div>
             </div>
-            <div class="row">
-                <div class="col-3"></div>
-                <div class="col-6">
+            <div class="row mt-4">
+                <div class="col">
                     <a href="https://www.linkedin.com/in/caeleb-koharjo-709174190/" class="list-group-item list-group-item-action text-center"> LinkedIn </a>
                 </div>
-                <div class="col-3"></div>
             </div>
         </div>
     </section>
